--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -10,15 +10,17 @@
 }
 
 // Variables
+$base: 4px;
 $fw-regular: 400;
 $fw-medium: 500;
 $fw-bold: 700;
 
-$padding-vertical-xs: 20px;
-$padding-vertical-sm: 60px;
-$padding-vertical: 120px;
+$padding-vertical-xs: $base * 5;
+$padding-vertical-sm: $base * 15;
+$padding-vertical: $base * 30;
 
 $color-divider: #d8e3fe;
+$transition: .33s;
 
 
 
