--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -31,3 +31,36 @@ body {
   }
 }
 
+.btn {
+  margin:0;
+  padding:$base* 3 $base* 4;
+  border: 0;
+  background-color: none;
+  @include quicksand;
+  font-weight: $fw-bold;
+  font-size: $fz-sm;
+  border-radius: 2px;
+  text-decoration: none;
+  transition: $transition;
+
+
+  &--primary {
+    background: #D2E1FF;
+    color: #3A79FF;
+
+    &:hover {
+      background:darken(#D2E1FF, 5%);  
+    }
+  }
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  padding: 0;
+  font-weight: $fw-regular;
+}
+
+h1,h2 {font-size: 48px;}
+h3 {font-size: 36px;}
+h4 {font-size: 24px;}
+h5 {font-size: 10px;}
