--- a/src/stylesheets/blocks/_hero-image.scss
+++ b/src/stylesheets/blocks/_hero-image.scss
@@ -1,3 +1,20 @@
 .section-hero-image {
     background-color: #f4f7ff;
 }
+
+.slider-hero-image {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    &__item {
+        height: $base* 140;
+        background-size: cover;
+        background-position: center;
+        text-align: center;
+
+        &-content {
+            
+        }
+    }
+}
