--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -12,6 +12,7 @@ body {
   background-color: #fff;
   @include roboto;
   line-height: 1.4;
+  color: #8D96BD;
 }
 
 .section {
@@ -33,7 +34,7 @@ body {
 
 .btn {
   margin:0;
-  padding:$base* 3 $base* 4;
+  padding: $base* 3 $base* 4;
   border: 0;
   background-color: none;
   @include quicksand;
@@ -55,12 +56,14 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
+  @include quicksand;
+  color:#3D4F9F;
   margin: 0;
   padding: 0;
   font-weight: $fw-regular;
 }
 
-h1,h2 {font-size: 48px;}
+h1,h2 {font-size: 48px; margin-bottom: $base* 7;}
 h3 {font-size: 36px;}
 h4 {font-size: 24px;}
-h5 {font-size: 10px;}
+h5 {font-size: 10px; @include roboto; margin-bottom: $base* 4;}
